chapter10/Ch.10.4_P4B_comoperators.txt
python-book-samples $ python
Python 3.13.2 (v3.13.2:4f8bb3947cf, Feb  4 2025, 11:51:10) [Clang 15.0.0 (clang-1500.3.9.4)] on darwin
Type "help", "copyright", "credits" or "license" for more information.
>>> 2<3
True
>>> "aa<"b"
  File "<python-input-1>", line 1
    "aa<"b"
         ^
SyntaxError: unterminated string literal (detected at line 1)
>>> "aa" < "b"
True
>>> 2 < 3
True
>>> True < 3
True
>>> 2 < "3"
Traceback (most recent call last):
  File "<python-input-5>", line 1, in <module>
    2 < "3"
TypeError: '<' not supported between instances of 'int' and 'str'
>>> 3 < 2
False
>>> help()
Welcome to Python 3.13's help utility! If this is your first time using
Python, you should definitely check out the tutorial at
https://docs.python.org/3.13/tutorial/.

Enter the name of any module, keyword, or topic to get help on writing
Python programs and using Python modules.  To get a list of available
modules, keywords, symbols, or topics, enter "modules", "keywords",
"symbols", or "topics".

Each module also comes with a one-line summary of what it does; to list
the modules whose name or summary contain a given string such as "spam",
enter "modules spam".

To quit this help utility and return to the interpreter,
enter "q", "quit" or "exit".

help> is

help> -2 < 0 < 5
No Python documentation found for '-2 < 0 < 5'.
Use help() to get the interactive help utility.
Use help(str) for help on the str class.

help> q

You are now leaving help and returning to the Python interpreter.
If you want to ask for help on a particular object directly from the
interpreter, you can type "help(object)".  Executing "help('string')"
has the same effect as typing a particular string at the help> prompt.
>>> -2 < 0 < 5
True
>>> 